# chargrid

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  README.md.prototty  clean.sh  debug_env_linux.sh  flake.nix  index.js  nightly.nix  package-lock.json  package.json  publish.sh  shell.nix  test.sh
.github/workflows/: test.yml
.nix/: common.nix
ansi-app/: Cargo.toml
ansi-app/src/: main.rs
ansi-terminal/: Cargo.toml  README.md
ansi-terminal/examples/: bold.rs
ansi-terminal/src/: context.rs  error.rs  lib.rs
ansi-terminal/src/terminal/: ansi_colour_codes.rs  ansi_terminal.rs  byte_prefix_tree.rs  low_level.rs  mod.rs  term_info_cache.rs  terminal.rs
app/: Cargo.toml  README.md
app/src/: lib.rs
audio/: Cargo.toml  README.md
audio/src/: lib.rs
chargrid/: Cargo.toml  README.md
chargrid/src/: lib.rs
common/: Cargo.toml  README.md
common/src/: add_offset.rs  align.rs  alignment.rs  border.rs  bound.rs  bound_size.rs  control_flow.rs  decorated.rs  defaults.rs  fade.rs  fill.rs  lib.rs  menu.rs  pad_by.rs  pad_to.rs  pager.rs  rich_text.rs  scroll.rs  set_size.rs  signal.rs  string_view.rs  style.rs  text.rs  text_field.rs  text_info.rs
common/src/control_flow/: boxed.rs  mod.rs  unboxed.rs
component/: Cargo.toml
component-common/: Cargo.toml
component-common/src/: align.rs  border.rs  control_flow.rs  fade.rs  fill.rs  lib.rs  menu.rs  pad_to.rs  signal.rs  text.rs
component-runtime/: Cargo.toml  README.md
component-runtime/src/: lib.rs
component/src/: lib.rs
coord/: Cargo.toml
coord/src/: lib.rs
core/: Cargo.toml  README.md
core/src/: lib.rs
decorator/: Cargo.toml  README.md
decorator/src/: align.rs  border.rs  bound.rs  col_modify.rs  fill_background.rs  identity.rs  lib.rs  min_size.rs  pad.rs  scroll.rs  transform_rgb24.rs  vertical_scroll.rs
decorators/: Cargo.toml
decorators/src/: border.rs  lib.rs
defaults/: Cargo.toml
defaults/src/: lib.rs
elements/: Cargo.toml  README.md
elements/examples/: border.rs  canvas.rs  menu.rs  mixed_text.rs  rich_text.rs  tetris.rs  text.rs  view.rs
elements/src/: border.rs  lib.rs  menu.rs  menu_runner.rs  rich_text.rs  text.rs  text_info.rs
elements/src/canvas/: canvas.rs  iterators.rs  mod.rs
elements/src/common/: mod.rs  text_info.rs
elements/src/menu/: menu.rs  menu_runner.rs  mod.rs
elements/src/text/: mod.rs  rich_text.rs  text.rs
event-routine/: Cargo.toml  README.md
event-routine/src/: app.rs  common_event.rs  event_routine.rs  handled.rs  lib.rs
examples/: basic_context.rs  border.rs  bordered_menu.rs  canvas.rs  context_bench.rs  echo.rs  echo_poll.rs  echo_timeout.rs  echo_wait.rs  hello_world.rs  rich_text.rs  tetris.rs  view.rs
examples/colour-picker/: Cargo.toml
examples/optional_features/: Cargo.toml
examples/roguelike/: controls.json  controls.yaml
examples/serialize/: Cargo.toml
examples/tetris/: README.md  test.sh
examples/tick-experiment/: Cargo.toml
examples/title/: README.md  test.sh
file-storage/: Cargo.toml  README.md
file-storage/src/: lib.rs
gamepad/: Cargo.toml  README.md
gamepad/src/: lib.rs
ggez/: Cargo.toml  README.md
ggez/src/: lib.rs
glutin/: Cargo.toml  README.md
glutin/src/: background.rs  cell.rs  context.rs  formats.rs  input.rs  lib.rs  main.rs
glutin/src/shaders/: background.150.frag  background.150.vert
glutin_app/: Cargo.toml
glutin_app/src/: main.rs
graphical/: Cargo.toml  README.md  compile-shaders.sh
graphical-common/: Cargo.toml  README.md
graphical-common/src/: lib.rs
graphical-gfx/: Cargo.toml  README.md
graphical-gfx/src/: background.rs  gfx_context.rs  input.rs  lib.rs
graphical/src/: background.rs  context.rs  input.rs  lib.rs  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  wgpu_context.rs
graphical_/: Cargo.toml
graphical_/src/: context.rs  input.rs  lib.rs  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  wgpu_context.rs
grid/: Cargo.toml  README.md
grid/src/: grid.rs  iterators.rs  lib.rs
input/: Cargo.toml  README.md
input/src/: lib.rs
memory-storage/: Cargo.toml
memory-storage/src/: lib.rs
menu/: Cargo.toml  README.md
menu/src/: dynamic_style.rs  event_routine.rs  fade.rs  instance.rs  lib.rs  menu.rs  static_style.rs  tick_routine.rs  view.rs
mono-storage/: Cargo.toml
monolithic-storage/: Cargo.toml  README.md
monolithic-storage/src/: lib.rs
native-audio/: Cargo.toml  README.md
native-audio/src/: audio_on_main_thread.rs  common.rs  dedicated_audio_thread.rs  lib.rs
nix/: common.nix  nightly.nix  offline.nix  stable.nix
prototty/: Cargo.toml  README.md
prototty-app/: Cargo.toml
prototty-app/src/: lib.rs
prototty-js/: README.md  index.js  package.json
prototty-renderer/: Cargo.toml
prototty-renderer/src/: lib.rs
prototty/src/: input.rs  lib.rs  renderer.rs  rgb24.rs  (+2 more)
prototty_app/: Cargo.toml
render/: Cargo.toml  README.md
runtime/: Cargo.toml  README.md
sdl2/: Cargo.toml  README.md
src/: byte_prefix_tree.rs  context.rs  coord.rs  default.rs  defaults.rs  error.rs  grid.rs  input.rs  iterators.rs  lib.rs  rgb24.rs  term_info_cache.rs  term_info_strings.rs  terminal.rs  unix_backend.rs  view.rs
storage/: Cargo.toml  README.md
terminal-js/: README.md  index.js  package-lock.json  package.json
test-grid/: Cargo.toml
text/: Cargo.toml  README.md
tick-routine/: Cargo.toml  README.md
tmp/: .gitignore  README.md
traits/: Cargo.toml
unix/: Cargo.toml  README.md
unix-app/: Cargo.toml
unix_app/: Cargo.toml
wasm/: Cargo.toml  README.md  package-lock.json  package.json
wasm-input/: Cargo.toml  README.md
wasm-input-js/: README.md  index.js  package.json
wasm-old/: Cargo.toml
wasm-render/: Cargo.toml  README.md
wasm-render-js/: README.md  index.js  package.json
wasm-storage/: Cargo.toml  README.md
wasm-storage-js/: index.js  package.json
wasm2/: Cargo.toml
wasm_app/: .gitignore  Cargo.toml  package-lock.json  package.json  webpack.config.js
web/: Cargo.toml  README.md
web-app/: Cargo.toml  build.sh
wgpu/: Cargo.toml  README.md  compile-shaders.sh
(+436 files in other folders)
