[workspace]

members = [
    "wgpu",
    "ggez",
    "ansi-terminal",
    "web",
    "graphical-common",
    "gamepad",
    "input",
    "component",
    "component-common",
    "component-runtime",

    "examples/tetris/tetris",
    "examples/tetris/app",
    "examples/tetris/wgpu",
    "examples/tetris/ggez",
    "examples/tetris/ansi-terminal",
    "examples/tetris/web",

    "examples/colour_grid/app",
    "examples/colour_grid/wgpu",
    "examples/colour_grid/ggez",
    "examples/colour_grid/ansi-terminal",
    "examples/colour_grid/web",

    "examples/component_experiment/app",
    "examples/component_experiment/wgpu",
    "examples/component_experiment/ggez",
    "examples/component_experiment/ansi-terminal",
    "examples/component_experiment/web",
]

[profile.release]
lto = true
