[package]
name = "ansi-app"
version = "0.1.0"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]

[dependencies]
tetris = { path = ".." }
prototty = { git = "https://github.com/stevebob/prototty", rev = "wasm-backend" }
prototty_elements = { git = "https://github.com/stevebob/prototty", rev = "wasm-backend" }
prototty-renderer = { path = "../prototty-renderer" }
rand = "0.4"
ansi_colour = "0.2"
cgmath = { git = "https://github.com/stevebob/cgmath", rev = "rand-0.4" }
