[package]
name = "prototty_ansi_terminal"
description = "Prototty context for ansi terminals."
version = "0.27.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/prototty.git"
repository = "https://github.com/stevebob/prototty.git"
documentation = "https://docs.rs/prototty_ansi_terminal"
edition = "2018"

[features]
serialize = ["prototty_render/serialize", "prototty_input/serialize"]
storage = ["prototty_file_storage"]

[dependencies]
prototty_render = { path = "../render", version = "0.27" }
prototty_input = { path = "../input", version = "0.27" }
prototty_event_routine = { path = "../event-routine", version = "0.27" }
prototty_file_storage = { path = "../file-storage", version = "0.27", optional = true }
prototty_app = { path = "../app", version = "0.27" }
libc = "0.2"
term = "0.6"

[dev-dependencies]
prototty = { path = "../prototty", version = "0.27" }
