[package]
name = "chargrid_ansi_terminal"
description = "chargrid context for ansi terminals."
version = "0.1.1"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/chargrid.git"
repository = "https://github.com/stevebob/chargrid.git"
documentation = "https://docs.rs/chargrid_ansi_terminal"
edition = "2018"

[features]
serialize = ["chargrid_render/serialize", "chargrid_input/serialize"]
gamepad = ["chargrid_gamepad", "chargrid_input/gamepad"]

[dependencies]
chargrid_render = { path = "../render", version = "0.1" }
chargrid_input = { path = "../input", version = "0.1" }
chargrid_app = { path = "../app", version = "0.1" }
chargrid_gamepad = { path = "../gamepad", version = "0.1", optional = true }
libc = "0.2"
term = "0.6"

[dev-dependencies]
chargrid = { path = "../chargrid", version = "0.3" }
