[package]
name = "chargrid_ansi_terminal"
description = "chargrid context for ansi terminals."
version = "0.4.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gridbugs/chargrid.git"
repository = "https://github.com/gridbugs/chargrid.git"
documentation = "https://docs.rs/chargrid_ansi_terminal"
edition = "2021"

[features]
serialize = ["chargrid_input/serialize"]
gamepad = ["chargrid_gamepad", "chargrid_input/gamepad", "chargrid_runtime/gamepad"]

[dependencies]
chargrid_input = { path = "../input", version = "0.4" }
chargrid_gamepad = { path = "../gamepad", version = "0.4", optional = true }
chargrid_runtime = { path = "../runtime", version = "0.2" }
grid_2d = "0.15"
libc = "0.2"
term = "0.7"
