[package]
name = "prototty_app"
version = "0.27.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/prototty.git"
repository = "https://github.com/stevebob/prototty.git"
documentation = "https://docs.rs/prototty_app"
edition = "2018"

[dependencies]
prototty_render = { path = "../render", version = "0.27" }
prototty_input = { path = "../input", version = "0.27" }
