[package]
name = "chargrid_app"
description = "Interface to be implemented by all chargrid applications"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/chargrid.git"
repository = "https://github.com/stevebob/chargrid.git"
documentation = "https://docs.rs/chargrid_app"
edition = "2018"

[dependencies]
chargrid_render = { path = "../render", version = "0.1" }
chargrid_input = { path = "../input", version = "0.1" }
