[package]
name = "chargrid"
description = "Wrapper crate for frontend-independent chargrid crates"
version = "0.4.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/chargrid.git"
repository = "https://github.com/stevebob/chargrid.git"
documentation = "https://docs.rs/chargrid"
edition = "2018"

[features]
serialize = [
    "chargrid_render/serialize",
    "chargrid_input/serialize",
    "chargrid_text/serialize",
    "chargrid_decorator/serialize",
    "chargrid_menu/serialize",
]
gamepad = ["chargrid_input/gamepad", "chargrid_menu/gamepad"]

[dependencies]
chargrid_render = { path = "../render", version = "0.2" }
chargrid_input = { path = "../input", version = "0.2" }
chargrid_decorator = { path = "../decorator", version = "0.2" }
chargrid_text = { path = "../text", version = "0.2" }
chargrid_menu = { path = "../menu", version = "0.3" }
chargrid_event_routine = { path = "../event-routine", version = "0.3" }
chargrid_app = { path = "../app", version = "0.2" }
