[package]
name = "prototty_common"
description = "Definition of common ui elements and views for use with prototty."
version = "0.20.0"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/prototty.git"
repository = "https://github.com/stevebob/prototty.git"
documentation = "https://docs.rs/prototty_common"

[features]
serialize = ["serde", "prototty/serialize"]

[dependencies]
prototty = { path = "../prototty", version = "0.20" }
serde = { version = "1.0", features = ["serde_derive"], optional = true }
