[package]
name = "prototty_common"
description = "Definition of common ui elements and views for use with prototty."
version = "0.24.1"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/prototty.git"
repository = "https://github.com/stevebob/prototty.git"
documentation = "https://docs.rs/prototty_common"

[features]
serialize = ["serde", "prototty_render/serialize", "prototty_input/serialize"]

[dependencies]
prototty_render = { path = "../render", version = "0.24" }
prototty_input = { path = "../input", version = "0.24" }
serde = { version = "1.0", features = ["serde_derive"], optional = true }
