[package]
name = "chargrid_common"
description = "Common utilities for making text UIs with chargrid"
version = "0.4.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gridbugs/chargrid.git"
repository = "https://github.com/gridbugs/chargrid.git"
documentation = "https://docs.rs/chargrid_common"
edition = "2021"

[features]
serialize = ["chargrid_core/serialize"]
gamepad = ["chargrid_core/gamepad"]

[dependencies]
chargrid_core = { path = "../core", version = "0.2" }
