[package]
name = "chargrid_core"
description = "Core types for chargrid framework"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gridbugs/chargrid.git"
repository = "https://github.com/gridbugs/chargrid.git"
documentation = "https://docs.rs/chargrid_core"
edition = "2021"

[features]
serialize = ["chargrid_input/serialize"]
gamepad = ["chargrid_input/gamepad"]

[dependencies]
rgb_int = "0.1"
grid_2d = "0.15"
chargrid_input = { path = "../input", version = "0.3" }
