[package]
name = "chargrid_core"
description = "Core types for chargrid framework"
version = "0.6.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gridbugs/chargrid.git"
repository = "https://github.com/gridbugs/chargrid.git"
documentation = "https://docs.rs/chargrid_core"
edition = "2024"

[features]
serialize = ["serde", "chargrid_input/serialize", "rgb_int/serialize"]
gamepad = ["chargrid_input/gamepad"]

[dependencies]
serde = { version = "1.0", features = ["serde_derive"], optional = true }
rgb_int = "0.2"
grid_2d = "0.16"
chargrid_input = { path = "../input", version = "0.7" }
