[package]
name = "chargrid_decorator"
description = "chargrid views for decorating other views"
version = "0.2.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gridbugs/chargrid.git"
repository = "https://github.com/gridbugs/chargrid.git"
documentation = "https://docs.rs/chargrid_decorator"
edition = "2018"

[features]
serialize = ["serde", "chargrid_render/serialize"]

[dependencies]
chargrid_render = { path = "../render", version = "0.2" }
serde = { version = "1.0", features = ["serde_derive"], optional = true }
