[package]
name = "prototty_defaults"
description = "Defaults shared by other prototty crates."
version = "0.8.0"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]
license = "MIT"
homepage = "https://github.com/stevebob/prototty.git"
repository = "https://github.com/stevebob/prototty.git"
documentation = "https://docs.rs/prototty_defaults"

[dependencies]
ansi_colour = "0.2"
