[package]
name = "prototty_elements"
version = "0.3.0"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]

[dependencies]
rand = "0.3"
itertools = "0.7"
cgmath = "0.15"
ansi_colour = "0.1"
prototty = { path = ".." }

[[example]]
name = "text"
path = "examples/text.rs"

[[example]]
name = "border"
path = "examples/border.rs"

[[example]]
name = "rich_text"
path = "examples/rich_text.rs"

[[example]]
name = "canvas"
path = "examples/canvas.rs"

[[example]]
name = "menu"
path = "examples/menu.rs"

[[example]]
name = "tetris"
path = "examples/tetris.rs"
