[package]
name = "prototty_elements"
description = "Definition of common ui elements and views for use with prototty."
version = "0.8.0"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]
license = "MIT"
homepage = "https://github.com/stevebob/prototty.git"
repository = "https://github.com/stevebob/prototty.git"
documentation = "https://docs.rs/prototty_elements"

[dependencies]
prototty_coord = { path = "../coord", version = "0.8.0" }
prototty_traits = { path = "../traits", version = "0.8.0" }
prototty_text = { path = "../text", version = "0.8.0" }
serde = "1.0"
serde_derive = "1.0"
