[package]
name = "chargrid_event_routine"
description = "Pseudo-synchronous composable event-based state machines for chargrid apps"
version = "0.3.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gridbugs/chargrid.git"
repository = "https://github.com/gridbugs/chargrid.git"
documentation = "https://docs.rs/chargrid_event_routine"
edition = "2018"

[features]
serialize = ["chargrid_render/serialize", "chargrid_input/serialize"]

[dependencies]
chargrid_render = { path = "../render", version = "0.2" }
chargrid_input = { path = "../input", version = "0.2" }
chargrid_app = { path = "../app", version = "0.2" }
log = "0.4"
