[package]
name = "prototty_file_storage"
description = "Implementation of prototty_storage::Storage backed by files."
version = "0.27.0"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/prototty.git"
repository = "https://github.com/stevebob/prototty.git"
documentation = "https://docs.rs/prototty_file_storage"

[dependencies]
prototty_storage = { path = "../storage", version = "0.27" }
bincode = "1.1"
serde = "1.0"
