[package]
name = "prototty_file_storage"
description = "Implementation of prototty_storage::Storage backed by files."
version = "0.27.0"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/prototty.git"
repository = "https://github.com/stevebob/prototty.git"
documentation = "https://docs.rs/prototty_file_storage"

[features]
yaml = ["prototty_storage/yaml"]
json = ["prototty_storage/json"]
toml = ["prototty_storage/toml"]
bincode = ["prototty_storage/bincode"]

[dependencies]
prototty_storage = { path = "../storage", version = "0.27" }
