[package]
name = "chargrid_gamepad"
description = "Gamepad handler for chargrid frontends"
version = "0.7.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gridbugs/chargrid.git"
repository = "https://github.com/gridbugs/chargrid.git"
documentation = "https://docs.rs/chargrid_gamepad"
edition = "2024"

[dependencies]
chargrid_input = { path = "../input", version = "0.7", features = ["gamepad"] }
gilrs = "0.11"
log = "0.4"
