[package]
name = "chargrid_ggez"
description = "Graphical chargrid context which renders with ggez"
version = "0.1.1"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/chargrid.git"
repository = "https://github.com/stevebob/chargrid.git"
documentation = "https://docs.rs/chargrid_ggez"
edition = "2018"

[features]
serialize = ["chargrid_input/serialize", "chargrid_render/serialize"]
gamepad = ["chargrid_input/gamepad", "hashbrown"]

[dependencies]
chargrid_graphical_common = { path = "../graphical-common", version = "0.2" }
chargrid_render = { path = "../render", version = "0.2" }
chargrid_input = { path = "../input", version = "0.2" }
chargrid_app = { path = "../app", version = "0.2" }
log = "0.4"
ggez = "0.6.0-rc1"
hashbrown = { version = "0.11", optional = true }
