[package]
name = "chargrid_ggez"
description = "Graphical chargrid context which renders with ggez"
version = "0.4.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gridbugs/chargrid.git"
repository = "https://github.com/gridbugs/chargrid.git"
documentation = "https://docs.rs/chargrid_ggez"
edition = "2021"

[features]
serialize = ["chargrid_input/serialize"]
gamepad = ["chargrid_input/gamepad", "hashbrown", "chargrid_runtime/gamepad"]

[dependencies]
chargrid_input = { path = "../input", version = "0.5" }
chargrid_runtime = { path = "../runtime", version = "0.3" }
log = "0.4"
ggez = "0.9.0-rc0"
hashbrown = { version = "0.14", optional = true }
