[package]
name = "prototty_glutin"
description = "Prototty context for glutin windows."
version = "0.21.0"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/prototty.git"
repository = "https://github.com/stevebob/prototty.git"
documentation = "https://docs.rs/prototty_glutin"

[features]
serialize = ["prototty_input/serialize", "prototty_render/serialize", "prototty_grid/serialize"]
storage = ["prototty_file_storage"]

[dependencies]
prototty_render = { path = "../render", version = "0.21" }
prototty_input = { path = "../input", version = "0.21" }
prototty_grid = { path = "../grid", version = "0.21" }
prototty_file_storage = { path = "../file-storage", version = "0.21", optional = true }
glutin = "0.19"
gfx_window_glutin = "0.28"
gfx_device_gl = "0.15"
gfx = "0.17"
gfx_glyph = "0.13"
itertools = "0.8"
