[package]
name = "prototty_glutin"
description = "Prototty context for glutin windows."
version = "0.27.0"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/prototty.git"
repository = "https://github.com/stevebob/prototty.git"
documentation = "https://docs.rs/prototty_glutin"

[features]
serialize = ["prototty_input/serialize", "prototty_render/serialize", "prototty_grid/serialize"]

[dependencies]
prototty_render = { path = "../render", version = "0.27" }
prototty_input = { path = "../input", version = "0.27" }
prototty_grid = { path = "../grid", version = "0.27" }
prototty_event_routine = { path = "../event-routine", version = "0.27" }
glutin = "0.21"
gfx_window_glutin = "0.31"
gfx_device_gl = "0.16"
gfx = "0.18"
gfx_glyph = "0.15"
