[package]
name = "chargrid_graphical_common"
description = "Definition of common types used by graphical chargrid frontends"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/chargrid.git"
repository = "https://github.com/stevebob/chargrid.git"
documentation = "https://docs.rs/chargrid_graphical_common"
edition = "2018"

[dependencies]
