[package]
name = "chargrid_graphical_common"
description = "Common types for graphical backends"
version = "0.2.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gridbugs/chargrid.git"
repository = "https://github.com/gridbugs/chargrid.git"
documentation = "https://docs.rs/chargrid_graphical_common"
edition = "2018"

[dependencies]
