[package]
name = "chargrid_graphical_gfx"
description = "chargrid context which renders with gfx"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/chargrid.git"
repository = "https://github.com/stevebob/chargrid.git"
documentation = "https://docs.rs/chargrid_graphical_gfx"
edition = "2018"

[features]
serialize = ["chargrid_input/serialize", "chargrid_render/serialize"]

[dependencies]
chargrid_app = { path = "../app", version = "0.1" }
chargrid_render = { path = "../render", version = "0.1" }
chargrid_input = { path = "../input", version = "0.1" }
chargrid_graphical_common = { path = "../graphical-common", version = "0.1" }
glutin = "0.21"
gfx_window_glutin = "0.31"
gfx_device_gl = "0.16"
gfx = "0.18"
gfx_glyph = "0.16"
log = "0.4"
