[package]
name = "chargrid_graphical"
description = "Graphical chargrid context which renders with wgpu"
version = "0.3.1"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/chargrid.git"
repository = "https://github.com/stevebob/chargrid.git"
documentation = "https://docs.rs/chargrid_graphical"
edition = "2018"

[features]
serialize = ["chargrid_input/serialize", "chargrid_render/serialize"]
force_vulkan = ["wgpu/vulkan-portability"]
gamepad = ["chargrid_gamepad", "chargrid_input/gamepad"]

[dependencies]
chargrid_render = { path = "../render", version = "0.1" }
chargrid_input = { path = "../input", version = "0.1" }
chargrid_app = { path = "../app", version = "0.1" }
chargrid_gamepad = { path = "../gamepad", version = "0.1", optional = true }
wgpu = "0.6"
wgpu_glyph = "0.10"
winit = "0.23"
zerocopy = "0.3"
log = "0.4"
grid_2d = "0.14"
futures = "0.3"
futures-executor = "0.3"
