[package]
name = "chargrid_graphical"
description = "Graphical chargrid context"
version = "0.6.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/chargrid.git"
repository = "https://github.com/stevebob/chargrid.git"
documentation = "https://docs.rs/chargrid_graphical"
edition = "2018"

[features]
default = ["wgpu"]
serialize = ["chargrid_wgpu/serialize"]
gamepad = ["chargrid_wgpu/gamepad"]
wgpu = ["chargrid_wgpu"]
ggez = ["chargrid_ggez"]

[dependencies]
chargrid_graphical_common = { path = "../graphical-common", version = "0.1" }
chargrid_wgpu = { path = "../wgpu", version = "0.1", optional =  true }
chargrid_ggez = { path = "../ggez", version = "0.1", optional =  true }
