[package]
name = "prototty_graphical_"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2018"

[features]
serialize = ["prototty_input/serialize", "prototty_render/serialize"]

[dependencies]
prototty_render = { path = "../render", version = "0.27" }
prototty_input = { path = "../input", version = "0.27" }
prototty_event_routine = { path = "../event-routine", version = "0.27" }
prototty_app = { path = "../app", version = "0.27" }
wgpu = "0.4"
wgpu_glyph = "0.6"
winit = "0.20.0-alpha4"
zerocopy = "0.2"
log = "0.4"
grid_2d = "0.14"
