[package]
name = "prototty_grid"
description = "Implementation of prototty::ViewGrid for use in renderers."
version = "0.21.0"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/prototty.git"
repository = "https://github.com/stevebob/prototty.git"
documentation = "https://docs.rs/prototty_grid"

[features]
serialize = ["prototty_render/serialize", "grid_2d/serialize"]

[dependencies]
prototty_render = { path = "../render", version = "0.21" }
grid_2d = "0.12"
