[package]
name = "prototty_grid"
description = "A grid of `prototty::ViewCell` implementations for use in prototty frontends"
version = "0.27.0"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/prototty.git"
repository = "https://github.com/stevebob/prototty.git"
documentation = "https://docs.rs/prototty_grid"

[features]
serialize = ["prototty_render/serialize", "grid_2d/serialize"]

[dependencies]
prototty_render = { path = "../render", version = "0.27" }
grid_2d = "0.13"
