[package]
name = "prototty_input"
description = "Normalized input type for prototty applications"
version = "0.24.0"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/prototty.git"
repository = "https://github.com/stevebob/prototty.git"
documentation = "https://docs.rs/prototty_input"

[features]
serialize = ["serde", "coord_2d/serialize"]

[dependencies]
serde = { version = "1.0", features = ["serde_derive"], optional = true }
coord_2d = "0.2"
