[package]
name = "chargrid_input"
description = "Normalized input type for chargrid applications"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/chargrid.git"
repository = "https://github.com/stevebob/chargrid.git"
documentation = "https://docs.rs/chargrid_input"
edition = "2018"

[features]
serialize = ["serde", "coord_2d/serialize"]

[dependencies]
serde = { version = "1.0", features = ["serde_derive"], optional = true }
coord_2d = "0.2"

[dev-dependencies]
serde_json = "1.0"
