[package]
name = "prototty_menu"
description = "Prototty menus"
version = "0.27.0"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/prototty.git"
repository = "https://github.com/stevebob/prototty.git"
documentation = "https://docs.rs/prototty_menu"

[features]
serialize = ["serde", "prototty_render/serialize", "prototty_input/serialize"]

[dependencies]
prototty_render = { path = "../render", version = "0.27" }
prototty_input = { path = "../input", version = "0.27" }
serde = { version = "1.0", features = ["serde_derive"], optional = true }
