[package]
name = "prototty_menu"
description = "Prototty menus"
version = "0.29.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/prototty.git"
repository = "https://github.com/stevebob/prototty.git"
documentation = "https://docs.rs/prototty_menu"
edition = "2018"

[features]
serialize = ["serde", "prototty_render/serialize", "prototty_input/serialize"]

[dependencies]
prototty_render = { path = "../render", version = "0.29" }
prototty_input = { path = "../input", version = "0.29" }
prototty_text = { path = "../text", version = "0.29" }
prototty_event_routine = { path = "../event-routine", version = "0.29" }
serde = { version = "1.0", features = ["serde_derive"], optional = true }
