[package]
name = "chargrid_menu"
description = "chargrid menus"
version = "0.3.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/chargrid.git"
repository = "https://github.com/stevebob/chargrid.git"
documentation = "https://docs.rs/chargrid_menu"
edition = "2018"

[features]
serialize = ["serde", "chargrid_render/serialize", "chargrid_input/serialize"]
gamepad = ["chargrid_input/gamepad"]

[dependencies]
chargrid_render = { path = "../render", version = "0.2" }
chargrid_input = { path = "../input", version = "0.2" }
chargrid_text = { path = "../text", version = "0.2" }
chargrid_event_routine = { path = "../event-routine", version = "0.3" }
serde = { version = "1.0", features = ["serde_derive"], optional = true }
